# mangoszero

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  Doxyfile.in  License.md  README.md  UPGRADE-1.1.md  UPGRADE-1.2.md  Vagrantfile  config.h.cmake  mangos-zero.astylerc  revision.h.cmake
src/: CMakeLists.txt
src/bindings/: .gitignore  CMakeLists.txt
src/bindings/universal/: ScriptMgr.cpp  ScriptMgr.h  config.h  system.cpp
src/framework/: CMakeLists.txt  Common.cpp  Common.h  revision_nr.h  revision_sql.h
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMapSet.h
src/framework/configuration/: Config.cpp  Config.h
src/framework/cryptography/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  Hmac.cpp  Hmac.h  Sha1.cpp  Sha1.h
src/framework/database/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.cpp  DatabasePostgre.h  Field.cpp  Field.h  PGSQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  QueryResultPostgre.cpp  QueryResultPostgre.h  SQLStorage.h  SQLStorageImpl.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
src/framework/debugging/: Errors.h  WheatyExceptionReport.h
src/framework/dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/game_system/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/log/: Log.cpp  Log.h
src/framework/network/: ByteBuffer.cpp  ByteBuffer.h  WorldPacket.h
src/framework/platform/: Define.h
src/framework/policies/: CreationPolicy.h  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/framework/system/: PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  SystemConfig.h.cmake
src/framework/threading/: LockedQueue.h  Threading.cpp  Threading.h
src/framework/utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  Timer.h  TypeList.h  UnorderedMapSet.h  Util.cpp  Util.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AggressorAI.cpp  AggressorAI.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  (+201 more)
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  CMakeLists.txt  ahbot.conf.dist.cmake
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/Eluna/: AuraMethods.h  CMakeLists.txt  CorpseMethods.h  CreatureMethods.h  ElunaBinding.h  ElunaEventMgr.h  ElunaIncludes.h  ElunaTemplate.h  ElunaUtility.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  HookMgr.h  ItemMethods.h  LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QueryMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WeatherMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
src/game/OutdoorPvP/: CMakeLists.txt  OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h
src/game/movement/: CMakeLists.txt  MoveSpline.cpp  MoveSpline.h  MoveSplineFlag.h  MoveSplineInit.cpp  MoveSplineInit.h  MoveSplineInitArgs.h  packet_builder.cpp  packet_builder.h  spline.cpp  spline.h  spline.impl.h  typedefs.h  util.cpp
src/game/vmap/: BIH.cpp  BIH.h  BIHWrap.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  GameObjectModel.cpp  GameObjectModel.h  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  RegularGrid.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  mangosd.conf.dist.cmake  mangosd.rc  mods.conf.dist.cmake
src/realmd/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  realmd.conf.dist.cmake  realmd.rc
src/scripts/: CMakeLists.txt  README.md  ScriptDevMgr.cpp  ScriptDevMgr.h  config-sd2.h.cmake  sd2_revision_nr.h  sd2_revision_sql.h
src/scripts/base/: escort_ai.cpp  escort_ai.h  follower_ai.cpp  follower_ai.h  guard_ai.cpp  guard_ai.h  pet_ai.cpp  pet_ai.h
src/scripts/include/: precompiled.cpp  precompiled.h  sc_creature.cpp  (+6 more)
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.cmake  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h  revision_nr.h  revision_sql.h
src/tools/: CMakeLists.txt
(+176 files in other folders)
